# ft_malloc

./: .gitignore  CMakeLists.txt  README.md
inc/: ft_malloc.h
src/: ft_malloc.c
test/: test.c
